...
                dark: "#FF3B30",
              },
            }}
          >
            <LogOut />
          </DropdownMenu.ItemIcon>
          <DropdownMenu.ItemTitle>Sign out</DropdownMenu.ItemTitle>
        </DropdownMenu.Item>
      </DropdownMenu.Content>
    </DropdownMenu.Root>
  );
}

