...
    }
    return (
      <View
        className={`flex-row items-center gap-2 ${containerClassName || ""}`}
      >
        <Type size={16} color="#fff" />
        <Text className="text-lg font-bold text-white">Describe event</Text>
      </View>
    );
  }

  return (
    <View className={`flex-row items-center ${containerClassName || ""}`}>
...
          />
          <Text
            className={`text-lg font-bold ${
              activeInput !== "describe" ? "text-white" : "text-white/60"
            }`}
          >
            Select image
          </Text>
        </View>
      </Pressable>

      <Text className="border-b-2 border-transparent px-3 text-lg font-semibold text-white/60">
        or
...
