appId: com.soonlist.app.dev
name: Sign In Email Flow
---
- assertVisible: "Other Options"
- tapOn: "Other Options"

- assertVisible: "Continue with Email"
- tapOn: "Continue with Email"

- assertVisible: "Already have an account? Sign in"
- tapOn: "Already have an account? Sign in"

- assertVisible: "Email"
- tapOn: "Email"
- inputText: ${MAESTRO_TEST_EMAIL_UNLIMITED}

- assertVisible: "Password"
- tapOn: "Password"
- inputText: ${MAESTRO_TEST_PASSWORD_UNLIMITED}

- assertVisible: "Sign in"
- tapOn: "done"
