appId: com.soonlist.app.dev
name: Intent Handler
---
# Close the app
- stopApp:
    appId: com.soonlist.app.dev

- openLink: "soonlist.dev://"

- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 87%,50%

- assertVisible: "Upcoming"

# Add event media
- addMedia:
    - "assets/food.png"

- tapOn:
    text: wait2seconds # Any random text that does not exist in the UI
    optional: true # This should be true so that the test won't fail
    repeat: 2
    delay: 2000
    label: "wait for media refresh"

- tapOn:
    point: 50%,93%

- assertVisible: "Select image"

- tapOn: "Capture event"

- assertVisible: "Upcoming"

- assertVisible: .*food.*

# Add event media
- addMedia:
    - "assets/music.png"

- tapOn:
    text: wait2seconds # Any random text that does not exist in the UI
    optional: true # This should be true so that the test won't fail
    repeat: 2
    delay: 2000
    label: "wait for media refresh"

- tapOn:
    point: 50%,93%

- assertVisible: "Select image"

- tapOn: "Capture event"

- assertVisible: "Upcoming"

- assertVisible: .*music.*
