appId: com.soonlist.app.dev
name: Onboarding Flow
---
- assertVisible: Turn on Push Notifications to capture and remember.
- tapOn: "Allow"
- assertVisible: "How old are you?"
- tapOn: "25-34"
- assertVisible: "Where did you hear about us?"
- tapOn: "TikTok"
- assertVisible: "Where do you see the most events?"
- tapOn: "Instagram"
- assertVisible: "Do you already screenshot events you're interested in?"
- tapOn: "Yes"
- assertVisible: "What's your main goal?"
- tapOn: "No more FOMO 😌"
- assertVisible: "We got you"
- tapOn: "Continue"
- assertVisible: "Unlimited"
